
[package]
name = "nexcore-harm-taxonomy"
version = "1.0.0"
edition = "2024"
authors = ["NexVigilant Team <team@nexvigilant.com>"]
license = "LicenseRef-Proprietary"
repository = "https://github.com/nexvigilant/nexcore"
rust-version = "1.85"
description = "Harm Classification Taxonomy (ToV §9): 8 harm types A-H, conservation law connections, manifestation levels"
keywords = ["pharmacovigilance", "harm-taxonomy", "safety", "type-theory"]
categories = ["science", "algorithms"]

[dependencies]
nexcore-lex-primitiva = { version = "0.1.0", path = "../nexcore-lex-primitiva", registry = "nexcore" }
serde = { version = "1.0.204", features = ["derive"] }

[lints]
workspace = true
